--- a/SWEN670-NeuralNet/.gitignore
+++ b/SWEN670-NeuralNet/.gitignore
@@ -10,6 +10,14 @@ local.properties
 .loadpath
 .recommenders
 
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+.nb-gradle/
+
 # Eclipse Core
 .project
 
